Update view Idiomas

--- a/Academia_De_Idiomas/Views/Idiomas/Idiomas.cshtml
+++ b/Academia_De_Idiomas/Views/Idiomas/Idiomas.cshtml
@@ -1,1 +1,29 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Idiomas";
+}
+
+<header id="header-idiomas">
+    <h1>@ViewBag.idioma</h1>
+</header>
+
+<div id="main-idiomas">
+    <section>
+        <h2>aaaa</h2>
+        <p>
+            lajdksdjsadjka
+        </p>
+    </section>
+    
+    <section>
+        <h2>ajksjdkasjd</h2>
+        
+        <ul>
+            kjasjdkasjkd
+        </ul>
+
+ @*       <img />*@
+
+    </section>
+
+    <button type="button" class="btn btn-primary" href="#">Obtener Curso</button>
+</div>
