--- a/Academia_De_Idiomas/Views/Home/PlanCurso.cshtml
+++ b/Academia_De_Idiomas/Views/Home/PlanCurso.cshtml
@@ -64,7 +64,8 @@
                 <li>Aprendizaje garantizado.</li>
             </ul>
 
-            <button type="button" class="btn btn-primary" href="#">Inscribirse</button>
+            <button type="button" class="btn btn-primary" ><a asp-area="" asp-controller="Usuario" asp-action="Registro">Inscribirse</a></button>
+
           </div>
         </div>
 
@@ -79,7 +80,7 @@
                 <li>8 idiomas disponibles.</li>
                 <li>Aprendizaje garantizado.</li>
             </ul>
-            <button type="button" class="btn btn-primary" href="#">Inscribirse</button>
+            <button type="button" class="btn btn-primary" ><a asp-area="" asp-controller="Usuario" asp-action="Registro">Inscribirse</a></button>
           </div>
         </div>
 
