--- a/Academia_De_Idiomas/Views/Idiomas/Idiomas.cshtml
+++ b/Academia_De_Idiomas/Views/Idiomas/Idiomas.cshtml
@@ -30,6 +30,6 @@
         </ul>
 
     </section>
+    <button type="button" class="btn btn-primary" ><a asp-area="" asp-controller="Usuario" asp-action="Registro">Obtener Curso</a></button>
 
-    <button type="button" class="btn btn-primary" href=@Url.Action("Usuario", "Registro")>Obtener Curso</button>
 </div>
