--- a/Academia_De_Idiomas/Views/Usuario/Registro.cshtml
+++ b/Academia_De_Idiomas/Views/Usuario/Registro.cshtml
@@ -41,20 +41,16 @@
                 <input name="Contraseña" type="password" placeholder="Contraseña"/>
             </div>
             <div class="btn">
-           @*     <select name="idioma" >
+                <select name="idioma" >
                     <option selected disabled>Idiomas</option>
-                     @foreach(var idioma in ViewBag.idiomas)
+
+                    us
+                     @*@foreach(var idioma in ViewBag.idiomas)
                         {
                             <option value="@idioma.Id">@idioma.Id = @idioma.NomIdioma</option>
-                        }
-                </select>*@
-
-                <select name="CodIdioma" >
-                    <option selected disabled>Idiomas</option>
-                     <option value="dennis">DENNIS</option>
-                     <option value="hector">HECTOR</option>
+                        }*@
                 </select>
-            </div>
+
            @* <div class="btn">
                 <select name="modalidad">
                     <option selected disabled>Modalidad</option>
