--- a/Academia_De_Idiomas/Views/Shared/_Layout.cshtml
+++ b/Academia_De_Idiomas/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Inicio de Sesión</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="inicioSesion">Inicio de Sesión</a>
                         </li>
                         <li class="nav-item">
                             <div class="dropdown">
